basic layouts gemaakt

--- a/src/basic/basic-layout-9.html
+++ b/src/basic/basic-layout-9.html
@@ -6,7 +6,33 @@
     <title>Basic Layout 9</title>
     <link rel="stylesheet" href="../style.css" />
     <style>
-      /* Doe hier jouw ding! */
+      body{
+        display: grid;
+        grid-template-columns: 2fr 4fr;
+        grid-template-rows: 2fr 5fr 2fr;
+        grid-template-areas: 
+        'header nav'
+        'main main'
+        'footer footer';
+        gap: 1em;
+      }
+
+      header{
+        grid-area: header;
+      }
+
+      nav{
+        grid-area: nav;
+      }
+
+      main{
+        grid-area: main;
+      }
+
+      footer{
+        grid-area: footer;
+      }
+
     </style>
   </head>
   <body id="basic-layout-9">
