--- a/src/basic/basic-layout-1.html
+++ b/src/basic/basic-layout-1.html
@@ -6,7 +6,34 @@
     <title>Basic Layout 1</title>
     <link rel="stylesheet" href="../style.css" />
     <style>
-      /* Doe hier jouw ding! */
+
+      body{
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+        grid-template-rows: 1fr 3fr 1fr;
+        grid-template-areas: 
+        'header header'
+        'nav main'
+        'footer footer';
+        gap: 1em;
+      }
+
+      header{
+        grid-area: header;
+      }
+
+      nav{
+        grid-area: nav;
+      }
+
+      main{
+        grid-area: main;
+      }
+
+      footer{
+        grid-area: footer;
+      }
+
     </style>
   </head>
   <body id="basic-layout-1">
