--- a/src/basic/basic-layout-2.html
+++ b/src/basic/basic-layout-2.html
@@ -6,7 +6,33 @@
     <title>Basic Layout 2</title>
     <link rel="stylesheet" href="../style.css" />
     <style>
-      /* Doe hier jouw ding! */
+      body{
+        display: grid;
+        grid-template-rows: 2fr 1fr 3fr 2fr;
+        grid-template-areas: 
+        'header'
+        'nav'
+        'main'
+        'footer';
+        gap: 1em;
+      }
+
+      header{
+        grid-area: header;
+      }
+
+      nav{
+        grid-area: nav;
+      }
+
+      main{
+        grid-area: main;
+      }
+
+      footer{
+        grid-area: footer;
+      }
+
     </style>
   </head>
   <body id="basic-layout-2">
