--- a/src/basic/basic-layout-3.html
+++ b/src/basic/basic-layout-3.html
@@ -6,7 +6,32 @@
     <title>Basic Layout 3</title>
     <link rel="stylesheet" href="../style.css" />
     <style>
-      /* Doe hier jouw ding! */
+      body{
+        display: grid;
+        grid-template-columns: 2fr 2fr;
+        grid-template-rows: 4fr 2fr 2fr;
+        grid-template-areas: 
+        'main main'
+        'footer footer'
+        'header nav';
+        gap: 1em;
+      }
+
+      header{
+        grid-area: header;
+      }
+
+      nav{
+        grid-area: nav;
+      }
+
+      main{
+        grid-area: main;
+      }
+
+      footer{
+        grid-area: footer;
+      }
     </style>
   </head>
   <body id="basic-layout-3">
