--- a/src/basic/basic-layout-4.html
+++ b/src/basic/basic-layout-4.html
@@ -6,7 +6,31 @@
     <title>Basic Layout 4</title>
     <link rel="stylesheet" href="../style.css" />
     <style>
-      /* Doe hier jouw ding! */
+        body{
+        display: grid;
+        grid-template-columns: 4fr 1fr;
+        grid-template-rows: 4fr 4fr;
+        grid-template-areas: 
+        'main header'
+        'footer nav';
+        gap: 1em;
+      }
+
+      header{
+        grid-area: header;
+      }
+
+      nav{
+        grid-area: nav;
+      }
+
+      main{
+        grid-area: main;
+      }
+
+      footer{
+        grid-area: footer;
+      }
     </style>
   </head>
   <body id="basic-layout-4">
