--- a/src/basic/basic-layout-5.html
+++ b/src/basic/basic-layout-5.html
@@ -6,7 +6,32 @@
     <title>Basic Layout 5</title>
     <link rel="stylesheet" href="../style.css" />
     <style>
-      /* Doe hier jouw ding! */
+       body{
+        display: grid;
+        grid-template-columns: 4fr 4fr;
+        grid-template-rows: 2fr 5fr 1fr;
+        grid-template-areas: 
+        'header header'
+        'main nav'
+        'main footer';
+        gap: 1em;
+      }
+
+      header{
+        grid-area: header;
+      }
+
+      nav{
+        grid-area: nav;
+      }
+
+      main{
+        grid-area: main;
+      }
+
+      footer{
+        grid-area: footer;
+      }
     </style>
   </head>
   <body id="basic-layout-5">
