--- a/src/basic/basic-layout-8.html
+++ b/src/basic/basic-layout-8.html
@@ -6,7 +6,32 @@
     <title>Basic Layout 8</title>
     <link rel="stylesheet" href="../style.css" />
     <style>
-      /* Doe hier jouw ding! */
+      body{
+        display: grid;
+        grid-template-columns: 3fr 3fr 3fr;
+        grid-template-rows: 2fr 4fr;
+        grid-template-areas: 
+        'header header header'
+        'nav main footer'
+        'nav main footer';
+        gap: 1em;
+      }
+
+      header{
+        grid-area: header;
+      }
+
+      nav{
+        grid-area: nav;
+      }
+
+      main{
+        grid-area: main;
+      }
+
+      footer{
+        grid-area: footer;
+      }
     </style>
   </head>
   <body id="basic-layout-8">
