--- a/src/advanced/advanced-layout-4.html
+++ b/src/advanced/advanced-layout-4.html
@@ -6,7 +6,40 @@
     <title>Advanced Layout 4</title>
     <link rel="stylesheet" href="../style.css" />
     <style>
-      /* Doe hier jouw ding! */
+      body{
+        display: grid;
+        grid-template-columns: 4fr 4fr;
+        grid-template-rows: 4fr 4fr;
+        grid-template-areas: 
+        'nav header'
+        'main footer';
+        gap: 1em;
+        padding: 0.5em;
+        margin: 0 auto;
+        height: 100vh;
+      }
+
+      header{
+        grid-area: header;
+        clip-path: polygon(0 0, 100% 0, 100% 73%, 0 87%);
+      }
+
+      nav{
+        grid-area: nav;
+        clip-path: polygon(0 0%, 100% 0, 100% 88%, 0 100%);
+      }
+
+      main{
+        grid-area: main;
+        clip-path: polygon(0 33%, 100% 21%, 100% 100%, 0% 100%);
+        transform: translateY(-35%);
+      }
+
+      footer{
+        grid-area: footer;
+        clip-path: polygon(0 20%, 100% 6%, 100% 100%, 0 100%);
+        transform: translateY(-35%);
+      }
     </style>
   </head>
   <body id="advanced-layout-4">
