--- a/src/advanced/advanced-layout-2.html
+++ b/src/advanced/advanced-layout-2.html
@@ -6,7 +6,39 @@
     <title>Advanced Layout 2</title>
     <link rel="stylesheet" href="../style.css" />
     <style>
-      /* Doe hier jouw ding! */
+      body{
+        display: grid;
+        grid-template-rows: repeat( 5, 2fr);
+        grid-template-areas: 
+        '.'
+        'header'
+        'nav'
+        'main'
+        'footer';
+        gap: 1em;
+        padding: 0.5em;
+        margin: 0 auto;
+        max-width: 100vw;
+        height: 100vh;
+      }
+
+      header{
+        grid-area: header;
+        transform:rotate(20deg);
+      }
+
+      nav{
+        grid-area: header;
+        transform:rotate(-20deg);
+      }
+
+      main{
+        grid-area: main;
+      }
+
+      footer{
+        grid-area: footer;
+      }
     </style>
   </head>
   <body id="advanced-layout-2">
