--- a/src/advanced/advanced-layout-3.html
+++ b/src/advanced/advanced-layout-3.html
@@ -6,7 +6,40 @@
     <title>Advanced Layout 3</title>
     <link rel="stylesheet" href="../style.css" />
     <style>
-      /* Doe hier jouw ding! */
+      body{
+        display: grid;
+        grid-template-columns: 1fr 2fr 4fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-areas: 
+        'header main main'
+        'nav main main'
+        'footer main main';
+        gap: 1em;
+        padding: 1em;
+      }
+
+      header{
+        margin: 0.8em;
+        grid-area: 1 / 1 / 2 / 3;
+        z-index: 2;
+      }
+
+      nav{
+        margin: 0.8em;
+        grid-area: 2 / 1 / 3 / 3;
+        z-index: 2;
+      }
+
+      main{
+        grid-area: 1 / 2 / 4 / 4;
+        z-index: 1;
+      }
+
+      footer{
+        margin: 0.8em;
+        grid-area: 3 / 1 / 4 / 3;
+        z-index: 2;
+      }
     </style>
   </head>
   <body id="advanced-layout-3">
