--- a/src/advanced/advanced-layout-5.html
+++ b/src/advanced/advanced-layout-5.html
@@ -6,7 +6,36 @@
     <title>Advanced Layout 5</title>
     <link rel="stylesheet" href="../style.css" />
     <style>
-      /* Doe hier jouw ding! */
+       body {
+        display: grid;
+        grid-template-columns: 5fr 3fr 1fr 3fr 3fr;
+        grid-template-rows: 2fr 2fr 1fr 2fr 3fr 2fr 2fr;
+        gap: 0.5em;
+        padding: 0.5em;
+        margin: 0 auto;
+        max-width: 20em;
+        height: 100vh;
+      }
+
+      header {
+        grid-area: 1 / 4 / 3 / 6;
+        z-index: 3;
+      }
+
+      nav {
+        grid-area: 2 / 2 / 5 / 5;
+        z-index: 2;
+      }
+
+      main {
+        grid-area: 4 / 1 / 7 / 3;
+        z-index: 1;
+      }
+
+      footer {
+        grid-area: 6 / 2 / 8 / 6;
+        z-index: 2;
+      }
     </style>
   </head>
   <body id="advanced-layout-5">
