--- a/src/advanced/advanced-layout-6.html
+++ b/src/advanced/advanced-layout-6.html
@@ -7,6 +7,34 @@
     <link rel="stylesheet" href="../style.css" />
     <style>
       /* Doe hier jouw ding! */
+      body {
+        display: grid;
+        grid-template-columns: 1fr 3fr 1fr 3fr 1fr;
+        grid-template-rows: 4fr 2fr 2fr 1fr 2fr 2fr 4fr;
+      }
+
+      header {
+        grid-row: 2/7;
+        grid-column: 4/5;
+      }
+
+      nav {
+        grid-row: 2/7;
+        grid-column: 2/3;
+      }
+
+      main {
+        grid-row: 1/4;
+        grid-column: 1/6;
+        z-index: -1;
+      }
+
+      footer {
+        grid-row: 5/8;
+        grid-column: 1/6;
+        z-index: -1;
+      }
+
     </style>
   </head>
   <body id="advanced-layout-6">
