--- a/src/advanced/advanced-layout-7.html
+++ b/src/advanced/advanced-layout-7.html
@@ -6,7 +6,43 @@
     <title>Advanced Layout 7</title>
     <link rel="stylesheet" href="../style.css" />
     <style>
-      /* Doe hier jouw ding! */
+      body {
+        display: grid;
+        grid-template-columns: 2fr 1fr 4fr 3fr 2fr 2fr 2fr;
+        grid-template-rows: 2fr 1fr 1fr 2fr 4fr 4fr;
+        padding: 0.5em;
+        margin: 0 auto;
+        max-width: 20em;
+        height: 100vh;
+      }
+
+      header {
+        grid-row: 1/3;
+        grid-column: 6/8;
+        z-index: 2;
+      }
+
+      nav {
+        max-width: 6em;
+        max-height: 6em;
+        grid-row: 2/5;
+        grid-column: 5/7;
+        transform: rotate(45deg);
+        z-index: 1;
+      }
+
+      main {
+        grid-row: 4/6;
+        grid-column: 3/6;
+      }
+
+      footer {
+        grid-row: 6/7;
+        grid-column: 2/4;
+        z-index: -1;
+        transform: rotate(45deg);
+      }
+
     </style>
   </head>
   <body id="advanced-layout-7">
