--- a/src/advanced/advanced-layout-9.html
+++ b/src/advanced/advanced-layout-9.html
@@ -6,7 +6,51 @@
     <title>Advanced Layout 9</title>
     <link rel="stylesheet" href="../style.css" />
     <style>
-      /* Doe hier jouw ding! */
+     body {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        gap: 0.5em;
+        padding: 0.5em;
+        margin: 0 auto;
+        max-width: 100vw;
+        height: 100vh;
+   
+      }
+
+      header {
+        grid-area: 1 / 1 / 2 / 2;
+        z-index: 3;
+        margin: 1em 2em 1em 0;
+        border-radius: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+      }
+
+      nav {
+        grid-area: 1 / 2 / 2 / 3;
+        z-index: 1;
+        border-radius: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+      }
+
+      main {
+        grid-area: 1 / 1 / 4 / 3;
+        z-index: 2;
+        margin: calc(100vh / 6) 0;
+        border-radius: 100%;
+      }
+
+      footer {
+        grid-area: 3 / 1 / 4 / 2;
+        z-index: 3;
+        border-radius: 100%;
+      }
     </style>
   </head>
   <body id="advanced-layout-9">
